# fighter_game

./: .gitignore  how_to_build.md
client/editor/: Cargo.toml
client/editor/src/: main.rs
client/executor/: Cargo.toml
client/executor-android/: Cargo.toml
client/executor-android/src/: lib.rs
client/executor-wasm/: Cargo.toml
client/executor-wasm/src/: lib.rs
client/executor/src/: main.rs
client/game/: Cargo.toml
client/game/src/: lib.rs  util.rs
resources/templates/: index.html.ep
server/: server.pl
server/lib/FighterGame/: L10N.pm
server/lib/FighterGame/L10N/: en_us.pm
